[gd_scene load_steps=10 format=2]

[ext_resource path="res://src/Scenes/Player/Player.tscn" type="PackedScene" id=1]
[ext_resource path="res://src/Scenes/Game/Game.gd" type="Script" id=2]
[ext_resource path="res://assets/ground.png" type="Texture" id=3]
[ext_resource path="res://src/Classes/CustomNumber/CustomNumber.tscn" type="PackedScene" id=4]
[ext_resource path="res://assets/best.png" type="Texture" id=5]
[ext_resource path="res://src/Scenes/Cloud/Cloud.tscn" type="PackedScene" id=6]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 320, 16 )

[sub_resource type="Animation" id=2]
resource_name = "default"
length = 0.3
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("ground:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2 ]
}

[sub_resource type="Animation" id=3]
resource_name = "idle"
length = 0.3
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2 ]
}

[node name="Game" type="Node"]
script = ExtResource( 2 )

[node name="World" type="Node2D" parent="."]

[node name="ColorRect" type="ColorRect" parent="World"]
margin_right = 639.0
margin_bottom = 365.0
color = Color( 0.784314, 0.784314, 0.784314, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Obstacles" type="Node2D" parent="World"]

[node name="Ground" type="StaticBody2D" parent="World"]
position = Vector2( 320, 344 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="World/Ground"]
shape = SubResource( 1 )

[node name="ground" type="Sprite" parent="World/Ground"]
position = Vector2( 0, 5.99997 )
texture = ExtResource( 3 )
hframes = 3

[node name="AnimationPlayer" type="AnimationPlayer" parent="World/Ground"]
autoplay = "default"
anims/default = SubResource( 2 )

[node name="Player" parent="World" instance=ExtResource( 1 )]
position = Vector2( 111, 294 )

[node name="SpawnPoints" type="Node2D" parent="World"]

[node name="Ground" type="Position2D" parent="World/SpawnPoints"]
position = Vector2( 640, 312 )

[node name="Air" type="Position2D" parent="World/SpawnPoints"]
position = Vector2( 640, 272 )

[node name="Cloud" parent="World" instance=ExtResource( 6 )]
position = Vector2( 299, 49 )

[node name="Cloud4" parent="World" instance=ExtResource( 6 )]
position = Vector2( 191, 103 )

[node name="Cloud5" parent="World" instance=ExtResource( 6 )]
position = Vector2( 79, 175 )

[node name="Cloud6" parent="World" instance=ExtResource( 6 )]
position = Vector2( -25, 78 )

[node name="Cloud2" parent="World" instance=ExtResource( 6 )]
position = Vector2( 493, 114 )

[node name="Cloud3" parent="World" instance=ExtResource( 6 )]
position = Vector2( 629, 166 )

[node name="SpawnTimer" type="Timer" parent="."]
wait_time = 0.001
autostart = true

[node name="ScoreTimer" type="Timer" parent="."]
wait_time = 0.5
autostart = true

[node name="DifficultTimer" type="Timer" parent="."]
wait_time = 3.0
autostart = true

[node name="UI" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Score" parent="UI" instance=ExtResource( 4 )]
position = Vector2( 518, 19 )
number = "\"000\""

[node name="HI-Score" parent="UI" instance=ExtResource( 4 )]
position = Vector2( 324.5, 19 )
number = "\"000\""

[node name="best" type="Sprite" parent="UI"]
position = Vector2( 260.5, 20 )
texture = ExtResource( 5 )
hframes = 3
frame = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="UI/best"]
autoplay = "idle"
anims/idle = SubResource( 3 )
[connection signal="timeout" from="SpawnTimer" to="." method="_on_SpawnTimer_timeout"]
[connection signal="timeout" from="ScoreTimer" to="." method="_on_ScoreTimer_timeout"]
[connection signal="timeout" from="DifficultTimer" to="." method="_on_DifficultTimer_timeout"]
